--- a/tribute_page.html
+++ b/tribute_page.html
@@ -1,9 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Tribute</title>
+        <style>
+            #title {
+                text-align: center;
+            }
+            #image {
+                max-width: 100%;
+                height: auto; /** User Story #8 */
+                display: block;
+                margin: 0 auto;
+                border: solid;
+                border-width: 2px;
+                border-color: darkolivegreen;
+            }
+            #img-caption {
+                text-align: center;
+            }
+            #tribute-info {    
+                text-align: justify;
+            }
+            #div-info {
+                border: solid;
+                border-width: 2px;
+                border-color: darkolivegreen;
+                max-width: 800px;
+                align-items: center;
+            }
+        </style>
+        <title>J. R. R. Tolkien</title>
     </head>
-    <body>
-        
-    </body>
+    <main> <!--User Story #1-->
+        <h1 id="title">J. R. R. Tolkien</h1> <!--User Story #2-->
+        <div id="img-div"> <!--User Story #3-->
+            <img id="image" src="tolk.jpg" alt="Tolkien's portrait"> <!--User Story #4-->
+            <figcaption id="img-caption"> <!--User Story #5-->
+                A photo of tolkien sitting near a tree.
+            </figcaption>
+        </div>
+        <div id="div-info">
+            <p id="tribute-info"> <!--User Story #6-->
+                John Ronald Reuel Tolkien CBE FRSL (3 January 1892 – 2 September 1973) was an English writer, poet, philologist, and academic, best known as the author of the high fantasy works The Hobbit and The Lord of the Rings.<br>
+                He served as the Rawlinson and Bosworth Professor of Anglo-Saxon and Fellow of Pembroke College, Oxford, from 1925 to 1945 and the Merton Professor of English Language and Literature and Fellow of Merton College, Oxford, from 1945 to 1959. 
+                He was a close friend of C. S. Lewis—they were both members of the informal literary discussion group known as The Inklings. Tolkien was appointed a Commander of the Order of the British Empire by Queen Elizabeth II on 28 March 1972.<br>
+                After Tolkien's death, his son Christopher published a series of works based on his father's extensive notes and unpublished manuscripts, including The Silmarillion. These, together with The Hobbit and The Lord of the Rings, 
+                form a connected body of tales, poems, fictional histories, invented languages, and literary essays about a fantasy world called Arda and Middle-earth within it. Between 1951 and 1955, Tolkien applied the term legendarium to the larger part of these writings.<br>
+                While many other authors had published works of fantasy before Tolkien, the great success of The Hobbit and The Lord of the Rings led directly to a popular resurgence of the genre. This has caused Tolkien to be popularly identified as 
+                the "father" of modern fantasy literature or, more precisely, of high fantasy. In 2008, The Times ranked him sixth on a list of "The 50 greatest British writers since 1945". Forbes ranked him the fifth top-earning "dead celebrity" in 2009.<br>
+                This is just an extract, you can find the complete biography on <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/J._R._R._Tolkien">Wikipedia</a>. <!--User Story #7-->
+            </p>
+        </div>
+
+    </main>
 </html>
