--- a/tribute_page.html
+++ b/tribute_page.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <style>
-            main {
+            #main {
                 background-color: rgb(156, 173, 126);               
             }
             #title {
@@ -64,7 +64,7 @@
         </style>
         <title>J. R. R. Tolkien</title>
     </head>
-    <main> <!--User Story #1-->
+    <body id="main"> <!--User Story #1-->
         <div id="title-div">
             <h1 id="title">J. R. R. Tolkien</h1> <!--User Story #2-->
             <p id="title-description">History of a poet</p>
@@ -77,7 +77,7 @@
             </figcaption>
         </div>
         <div id="div-info">
-            <p id="tribute-info"> <!--User Story #6-->
+            <div id="tribute-info"> <!--User Story #6-->
                 <h2 id="paragraph-title">The story so far...</h2>
                 John Ronald Reuel Tolkien CBE FRSL (3 January 1892 – 2 September 1973) was an English writer, poet, philologist, and academic, best known as the author of the high fantasy works The Hobbit and The Lord of the Rings.<br>
                 He served as the Rawlinson and Bosworth Professor of Anglo-Saxon and Fellow of Pembroke College, Oxford, from 1925 to 1945 and the Merton Professor of English Language and Literature and Fellow of Merton College, Oxford, from 1945 to 1959. 
@@ -86,10 +86,10 @@
                 form a connected body of tales, poems, fictional histories, invented languages, and literary essays about a fantasy world called Arda and Middle-earth within it. Between 1951 and 1955, Tolkien applied the term legendarium to the larger part of these writings.<br>
                 While many other authors had published works of fantasy before Tolkien, the great success of The Hobbit and The Lord of the Rings led directly to a popular resurgence of the genre. This has caused Tolkien to be popularly identified as 
                 the "father" of modern fantasy literature or, more precisely, of high fantasy. In 2008, The Times ranked him sixth on a list of "The 50 greatest British writers since 1945". Forbes ranked him the fifth top-earning "dead celebrity" in 2009.
-            </p>
+            </div>
         </div>
         <footer>
             This is just an extract, you can find the complete biography on <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/J._R._R._Tolkien">Wikipedia</a>. <!--User Story #7-->
         </footer>
-    </main>
+    </body>
 </html>
